--- a/package.json
+++ b/package.json
@@ -3,13 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "next": "next dev",
+    "dev": "nodemon server.ts",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "next": "10.0.6",
+    "nodemon": "^2.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/next": "^9.0.0",
+    "@types/react": "^17.0.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
